--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= f.label :course_id %>
-    <%= f.text_field :course_id %>
+    <%= f.select :course_id, Course.all.collect { |p| [ p.name, p.id ] }, include_blank: true %>
   </div>
 
   <div class="actions">
