--- a/app/views/teachers/_form.html.erb
+++ b/app/views/teachers/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= f.label :section_id %>
-    <%= f.text_field :section_id %>
+    <%= f.select :section_id, Section.all.collect { |p| [ p.sectionNumber, p.id ] }, include_blank: true %>
   </div>
 
   <div class="actions">
