Added login auth, form validation, and search on each index

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,4 +9,6 @@
 <%= link_to 'Students', students_path %>
 <br>
 <%= link_to 'Teachers', teachers_path%>
-
+<br>
+<br>
+<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
