--- a/app/views/teachers/new.html.erb
+++ b/app/views/teachers/new.html.erb
@@ -1,5 +1,9 @@
+<div style="padding: 20px">
+
 <h1>New Teacher</h1>
 
 <%= render 'form', teacher: @teacher %>
 
 <%= link_to 'Back', teachers_path %>
+
+</div>
