--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,36 +1,78 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Courses</h1>
+<div style="padding: 20px">
 
-<%= form_tag url_for(:controller => 'courses', :action => 'index'), :method => 'get' do %>
-    <p>
-      <%= text_field_tag :search, params[:search] %>
-      <%= submit_tag "Search", :name => nil %>
-    </p>
-<% end %>
+  <div class="jumbotron text-center blueBackground">
+    <h1>Courses</h1>
+  </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <div>
+    <div class="row">
+      <div class="col-sm-3"></div>
+      <div class="col-sm-3"></div>
+      <div class="col-sm-4"></div>
+      <div class="col-sm-2">
+        <% if user_signed_in? %>
+            <div align="right">
+              <label style="color: #2979FF">
+                Welcome <%= current_user.email %>
+              </label>
+            </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
 
-  <tbody>
-    <% @courses.each do |course| %>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-3"></div>
+      <div class="col-sm-3">
+        <h3><%= link_to('Index', {:controller => 'home', :action => 'index'} ) %></h3>
+      </div>
+      <div class="col-sm-3">
+        <h3><%= link_to 'New Course', new_course_path %></h3>
+      </div>
+      <div class="col-sm-3"></div>
+    </div>
+  </div>
+
+  <div style="margin-top: 50px">
+    <div class="row">
+      <div class="col-sm-4"></div>
+        <%= form_tag url_for(:controller => 'courses', :action => 'index'), :method => 'get', :class => 'form-group'  do %>
+          <div class="col-sm-3">
+              <%= text_field_tag :search, params[:search], class: 'form-control', :placeholder => 'Search by Course Name' %>
+          </div>
+          <div class="col-sm-3">
+              <%= submit_tag "Search", :name => nil, class: 'btn btn-info' %>
+          </div>
+        <% end %>
+      <div class="col-sm-2"></div>
+    </div>
+  </div>
+
+  <div style="margin-top: 50px">
+    <table class="table table-striped" >
+      <thead>
       <tr>
-        <td><%= course.name %></td>
-        <td><%= link_to 'Show', course %></td>
-        <td><%= link_to 'Edit', edit_course_path(course) %></td>
-        <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+      </thead>
 
-<br>
+      <tbody>
+      <% @courses.each do |course| %>
+          <tr>
+            <td><%= course.name %></td>
+            <td><%= link_to 'Show', course %></td>
+            <td><%= link_to 'Edit', edit_course_path(course) %></td>
+            <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
 
-<%= link_to 'New Course', new_course_path %>
-<br>
-<%= link_to('Index', {:controller => 'home', :action => 'index'} ) %>
+</div>
+
+
