--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Course</h1>
+<div style="padding: 20px">
 
-<%= render 'form', course: @course %>
+  <h1>New Course</h1>
 
-<%= link_to 'Back', courses_path %>
+  <%= render 'form', course: @course %>
+
+  <%= link_to 'Back', courses_path %>
+
+</div>
