--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -1,38 +1,78 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Sections</h1>
+<div style="padding: 20px">
 
-<%= form_tag url_for(:controller => 'sections', :action => 'index'), :method => 'get' do %>
-    <p>
-      <%= text_field_tag :search, params[:search] %>
-      <%= submit_tag "Search", :name => nil %>
-    </p>
-<% end %>
+  <div class="jumbotron text-center blueBackground">
+    <h1>Sections</h1>
+  </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Section Number</th>
-      <th>Course Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <div>
+    <div class="row">
+      <div class="col-sm-3"></div>
+      <div class="col-sm-3"></div>
+      <div class="col-sm-4"></div>
+      <div class="col-sm-2">
+        <% if user_signed_in? %>
+            <div align="right">
+              <label style="color: #2979FF">
+                Welcome <%= current_user.email %>
+              </label>
+            </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
 
-  <tbody>
-    <% @sections.each do |section| %>
-      <tr>
-        <td><%= section.sectionNumber %></td>
-        <td><%= section.course.name %></td>
-        <td><%= link_to 'Show', section %></td>
-        <td><%= link_to 'Edit', edit_section_path(section) %></td>
-        <td><%= link_to 'Destroy', section, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-3"></div>
+      <div class="col-sm-3">
+        <h3><%= link_to('Index', {:controller => 'home', :action => 'index'} ) %></h3>
+      </div>
+      <div class="col-sm-3">
+        <h3><%= link_to 'New Section', new_section_path %></h3>
+      </div>
+      <div class="col-sm-3"></div>
+    </div>
+  </div>
 
-<br>
+  <div style="margin-top: 50px">
+    <div class="row">
+      <div class="col-sm-4"></div>
+      <%= form_tag url_for(:controller => 'sections', :action => 'index'), :method => 'get' do %>
+          <div class="col-sm-3">
+            <%= text_field_tag :search, params[:search], class: 'form-control', :placeholder => 'Search by Section Number' %>
+          </div>
+          <div class="col-sm-3">
+            <%= submit_tag "Search", :name => nil, class: 'btn btn-info' %>
+          </div>
+      <% end %>
+      <div class="col-sm-2"></div>
+    </div>
+  </div>
 
-<%= link_to 'New Section', new_section_path %>
-<br>
-<%= link_to('Index', {:controller => 'home', :action => 'index'} ) %>
+  <div style="margin-top: 50px">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Section Number</th>
+          <th>Course Name</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @sections.each do |section| %>
+          <tr>
+            <td><%= section.sectionNumber %></td>
+            <td><%= section.course.name %></td>
+            <td><%= link_to 'Show', section %></td>
+            <td><%= link_to 'Edit', edit_section_path(section) %></td>
+            <td><%= link_to 'Destroy', section, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+
+</div>
