--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Section</h1>
+<div style="padding: 20px">
+  <h1>New Section</h1>
 
-<%= render 'form', section: @section %>
+  <%= render 'form', section: @section %>
 
-<%= link_to 'Back', sections_path %>
+  <%= link_to 'Back', sections_path %>
+</div>
