--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Student</h1>
+<div style="padding: 20px">
 
-<%= render 'form', student: @student %>
+  <h1>New Student</h1>
 
-<%= link_to 'Back', students_path %>
+  <%= render 'form', student: @student %>
+
+  <%= link_to 'Back', students_path %>
+
+</div>
